--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-#root {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 footer {
+  bottom: 0;
   position: fixed;
-  bottom: 0px;
 }
