--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -127,14 +127,14 @@
     
     .div__header img:first-child {
         width: 62.6px;
-        height: 89.28px;
+        height: 69.28px;
         margin: 0 5% 0 5%;
     }
     
     .div__header img:nth-child(2) {
-        width: 200.13px;
+        width: 400.13px;
         height: 50.97px;
-        margin: 0 50% 0 0;
+        margin: 0 40% 0 -30px;
     }
     
     .div__header button{
