--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -12,10 +12,9 @@
     }
     
     .form__login {
-        background-color: rgba(255, 255, 255, 0.5);
-        border-radius: 10px;
-        height: 400px;
-        width: 300px;
+        background-color: rgba(255, 255, 255, 0.8);
+        height: 600px;
+        width: 100%;
         padding: 50px;
         display: flex;
         flex-direction: column;
@@ -31,7 +30,7 @@
     }
     
     .form__login form input{
-    width: 176px;
+    width: 226px;
     height: 35px;
     margin-bottom: 10px;
     padding: 10px;
@@ -45,8 +44,8 @@
     }
 
     .form__login form button {
-        width: 176px;
-    height: 40px;
+        width: 226px;
+    height: 35px;
     color: black;
     font-size: 12px;
     background: #FCC436;
@@ -73,7 +72,7 @@
     }
     
     .form__login {
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(82, 90, 124, 0.8);
         border-radius: 10px;
         height: 400px;
         width: 600px;
