[FEAT]FIX: CORRIGE O SEARCH BAR DO HEADER

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -52,6 +52,12 @@
         display: none;
     }
 
+    .div__header form{
+        display: block;
+        margin-top: 600px;
+        
+    }
+
 
 }    
 
