--- a/src/styles/RecipeCard.css
+++ b/src/styles/RecipeCard.css
@@ -7,8 +7,8 @@
   height: 166.12px;
   justify-self: center;
   left: 185.12px;
-  margin-left: 100px;
-  margin-top: 30px;
+  margin-left: 10px;
+  margin-top: 10px;
   top: 250.1px;
   width: 163.2px;
 }
@@ -29,6 +29,10 @@
   width: 161px;
 }
 
+a{
+text-decoration: none;
+}
+
 .titleCard {
   color: hsl(210, 4%, 11%);
   display: flex;
@@ -44,3 +48,4 @@
   top: 394.86px;
   width: 142.8px;
 }
+
