--- a/src/styles/favorite-recipes.css
+++ b/src/styles/favorite-recipes.css
@@ -1,17 +1,17 @@
-.main__favorites main{
-    height: 50vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main__favorites main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 50vh;
+  width: 100%;
 }
 
-.main__favorites main div{ 
-    margin-top: 15px;
+.main__favorites main div {
+  margin-top: 15px;
 }
 
-.favorite__btn button{
- border: none;
- margin-right: 20px;
- background-color: #ffffff;
+.favorite__btn button {
+  background-color: white;
+  border: none;
+  margin-right: 20px;
 }
