--- a/src/styles/favorite-recipes.css
+++ b/src/styles/favorite-recipes.css
@@ -6,6 +6,11 @@
     align-items: center;
 }
 
+.main__favorites section{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .main__favorites main div{ 
     margin-top: 15px;
 }
