--- a/src/styles/DoneRecipes.css
+++ b/src/styles/DoneRecipes.css
@@ -1,7 +1,3 @@
-/* .container {
-  align-items: center;
-} */
-
 main {
   align-items: center;
   display: flex;
@@ -62,4 +58,24 @@ main {
   padding-top: 5px;
   top: 184.28px;
   width: 66.72px;
+}
+
+.container {
+  width: 100% !important
+}
+
+.div__done__recipes{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.div__done__recipes div{
+  margin: 1px;
+}
+
+.div__done__recipes div .tags{
+  color: black;
+  font-weight: 500;
 }
