--- a/src/styles/RecipeCard.css
+++ b/src/styles/RecipeCard.css
@@ -6,11 +6,21 @@
   display: flex;
   height: 166.12px;
   justify-self: center;
-  left: 185.12px;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin: 5px;
   top: 250.1px;
   width: 163.2px;
+}
+
+.recipeCardDiv div{
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.recipeCardDiv div p{
+width: 100%;
+height: 10px;
 }
 
 .central {
@@ -37,7 +47,7 @@ text-decoration: none;
   color: hsl(210, 4%, 11%);
   display: flex;
   font-family: Georgia , serif;
-  font-size: 18px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
   height: 12px;
