--- a/src/styles/RecipeDetails.css
+++ b/src/styles/RecipeDetails.css
@@ -90,6 +90,16 @@ margin: 10px;
         padding: 20px;
         }
 
+        .button-start{
+            width: 336px;
+            height: 40px;
+            color: white;
+            font-weight: 600;
+            background: #FCC436;
+            border-radius: 5px;
+        }
+
+
 li {
     list-style: none;
     font-weight: 500;
